package org.example.SistemaPagoP1;

abstract class MetodoPago {

    public abstract void procesarPago(double importe);

}


